Fix password overlay - centered modal with proper styling

--- a/index.html
+++ b/index.html
@@ -12,6 +12,72 @@
 <script src="./data/auto-load-data.js"></script>
 </head>
 <body>
+<style>
+#pw-overlay {
+  position: fixed;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background: linear-gradient(135deg, #1e3a5f 0%, #0f2540 100%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+#pw-box {
+  background: #ffffff;
+  border-radius: 16px;
+  padding: 48px 52px;
+  width: 420px;
+  max-width: 90vw;
+  box-shadow: 0 20px 60px rgba(0,0,0,0.4);
+  text-align: center;
+}
+#pw-logo {
+  font-size: 28px;
+  font-weight: 700;
+  color: #1e3a5f;
+  margin-bottom: 8px;
+}
+#pw-sub {
+  font-size: 15px;
+  color: #64748b;
+  margin-bottom: 32px;
+}
+#pw-input {
+  width: 100%;
+  padding: 14px 18px;
+  font-size: 17px;
+  border: 2px solid #cbd5e1;
+  border-radius: 10px;
+  outline: none;
+  box-sizing: border-box;
+  margin-bottom: 16px;
+  transition: border-color 0.2s;
+}
+#pw-input:focus {
+  border-color: #1e3a5f;
+}
+#pw-btn {
+  width: 100%;
+  padding: 14px;
+  font-size: 16px;
+  font-weight: 600;
+  background: #1e3a5f;
+  color: #ffffff;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background 0.2s;
+}
+#pw-btn:hover {
+  background: #2d5a9e;
+}
+#pw-error {
+  color: #dc2626;
+  font-size: 14px;
+  margin-top: 14px;
+  display: none;
+}
+</style>
 <div id="pw-overlay">
   <div id="pw-box">
     <div id="pw-logo">🏠 ThriveWell Co-Living</div>
@@ -317,24 +383,32 @@ canvas{max-height:320px}
 <!-- EXPENSES TAB -->
 <div id="tab-expenses" class="tab-content">
 
-  <!-- Expense Breakdown by Category Chart -->
+  <!-- Stacked Expense Chart: By Property & Category -->
   <div style="background:#ffffff;border-radius:14px;padding:22px 24px;margin-bottom:28px;border:1px solid #e2e8f0;box-shadow:0 2px 8px rgba(0,0,0,0.06);">
     <div style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:12px;margin-bottom:18px;">
       <div>
-        <h3 style="color:#1e293b;margin:0 0 4px 0;font-size:17px;">📊 Expense Breakdown by Category</h3>
-        <div style="color:#64748b;font-size:12px;">Each bar = one expense category — sorted by total amount</div>
+        <h3 style="color:#1e293b;margin:0 0 4px 0;font-size:17px;">📊 Expenses by Property &amp; Category</h3>
+        <div style="color:#64748b;font-size:12px;">Stacked view — each bar = one property, color = expense category</div>
       </div>
-      <div style="display:flex;gap:8px;flex-wrap:wrap;" id="catViewBtns">
-        <button onclick="setCatView('2026-01')" id="btnCat01"
-          style="padding:7px 16px;border-radius:20px;border:2px solid #3b82f6;cursor:pointer;font-size:12px;font-weight:600;background:#3b82f6;color:#fff;">Jan 2026</button>
-        <button onclick="setCatView('2026-02')" id="btnCat02"
-          style="padding:7px 16px;border-radius:20px;border:2px solid #e2e8f0;cursor:pointer;font-size:12px;font-weight:600;background:#ffffff;color:#475569;">Feb 2026 ⚠️</button>
-        <button onclick="setCatView('ytd')" id="btnCatYTD"
-          style="padding:7px 16px;border-radius:20px;border:2px solid #e2e8f0;cursor:pointer;font-size:12px;font-weight:600;background:#ffffff;color:#475569;">YTD 2026</button>
+      <div style="display:flex;gap:8px;flex-wrap:wrap;">
+        <button onclick="setStackView('monthly')" id="btnStackMonthly"
+          style="padding:7px 16px;border-radius:20px;border:none;cursor:pointer;font-size:12px;font-weight:600;background:#3b82f6;color:#fff;">Monthly</button>
+        <button onclick="setStackView('annual')" id="btnStackAnnual"
+          style="padding:7px 16px;border-radius:20px;border:none;cursor:pointer;font-size:12px;font-weight:600;background:#2d3448;color:#94a3b8;">Annual</button>
       </div>
     </div>
-    <div style="position:relative;height:480px;">
-      <canvas id="catExpenseChart" style="width:100%;height:100%;"></canvas>
+    <div style="position:relative;height:360px;">
+      <canvas id="stackedExpenseChart" style="width:100%;height:100%;"></canvas>
+    </div>
+    <!-- Legend -->
+    <div id="stackedExpLegend" style="display:flex;flex-wrap:wrap;gap:8px 16px;margin-top:14px;padding:10px 14px;background:#f8fafc;border-radius:8px;border:1px solid #e2e8f0;"></div>
+    <!-- Addenda -->
+    <div style="display:flex;flex-wrap:wrap;gap:10px 20px;margin-top:10px;padding:10px 14px;background:#f1f5f9;border-radius:8px;border:1px solid #e2e8f0;">
+      <div style="font-size:11px;color:#64748b;"><strong style="color:#94a3b8;">Each bar</strong> = one investment property (excludes primary residence &amp; inactive)</div>
+      <div style="font-size:11px;color:#64748b;"><strong style="color:#94a3b8;">Colors</strong> = expense category stacked within each property bar</div>
+      <div style="font-size:11px;color:#64748b;"><strong style="color:#94a3b8;">Monthly view</strong> = Jan &amp; Feb 2026 side-by-side per property</div>
+      <div style="font-size:11px;color:#64748b;"><strong style="color:#94a3b8;">Annual view</strong> = YTD totals per property (all months combined)</div>
+      <div style="font-size:11px;color:#64748b;"><strong style="color:#94a3b8;">Hover</strong> = see exact $ amount per category per property</div>
     </div>
   </div>
 
@@ -1385,7 +1459,7 @@ function showTab(id) {
         stackedExpenseChartInstance.destroy();
         stackedExpenseChartInstance = null;
       }
-      initCatExpenseChart();
+      initStackedExpenseChart();
     }, 150);
   }
 }
@@ -1542,6 +1616,7 @@ function initDashboard() {
   }
   
   console.log('expensesAutoLoaded loaded:', expensesAutoLoaded.length, 'transactions');
+  rebuildStackedDataFromExpenses();
   // Destroy any existing chart instances to prevent conflicts
   Chart.helpers && Object.values(Chart.instances || {}).forEach(c => c.destroy && c.destroy());
   updatePendingCount();
@@ -2241,118 +2316,142 @@ if (sessionStorage.getItem('twcl_auth')==='1') {
 // ========================================================
 // STACKED EXPENSE CHART BY PROPERTY & CATEGORY
 // ========================================================
-var catExpenseChartInstance = null;
-var currentCatView = '2026-01';
+var stackedExpenseChartInstance = null;
 
-var catPalette = [
-  '#ef4444','#f97316','#eab308','#22c55e','#06b6d4',
-  '#3b82f6','#8b5cf6','#ec4899','#14b8a6','#f59e0b',
-  '#84cc16','#a78bfa','#fb7185','#64748b','#0ea5e9'
-];
-
-function buildCatExpenseData(view) {
-  var totals = {};
-  if (typeof expensesAutoLoaded !== 'undefined') {
-    expensesAutoLoaded.forEach(function(e) {
-      if (e.income) return;
-      var month = (e.date && e.date.length >= 7) ? e.date.substring(0,7) : '';
-      if (view === 'ytd' || month === view) {
-        var cat = e.cat || 'Other';
-        totals[cat] = (totals[cat] || 0) + (e.amount || 0);
-      }
-    });
+var stackedData = {
+  properties: [],
+  propertyIds: [],
+  months: [],
+  byPropertyMonth: {
+    'p1': { 'Jan 2026': { 'Mortgage': 1066 }, 'Feb 2026': {} },
+    'p2': { 'Jan 2026': { 'Mortgage': 2418.35 }, 'Feb 2026': {} },
+    'p3': { 'Jan 2026': { 'Mortgage': 2419.48, 'Electric': 54.90, 'Internet': 200, 'Solar': 93 }, 'Feb 2026': { 'Internet': 200 } },
+    'p5': { 'Jan 2026': { 'Mortgage': 2594.95, 'Materials': 54.58, 'Repairs': 120, 'Electric': 76.82, 'Gas': 89.90, 'Internet': 32.08 }, 'Feb 2026': { 'Materials': 29.15, 'Internet': 16.04 } },
+    'p6': { 'Jan 2026': { 'Landscaping': 364.86, 'Repairs': 320.90, 'Electric': 214.16, 'Gas': 95.47, 'Internet': 215.42 }, 'Feb 2026': { 'Internet': 215.40 } },
+    'p7': { 'Jan 2026': { 'Mortgage': 3763, 'Furnishings': 50, 'Landscaping': 965, 'Marketing': 505, 'Materials': 1436.46, 'Repairs': 1860, 'Software': 126.36, 'Electric': 59.25, 'Internet': 156.37 }, 'Feb 2026': { 'Materials': 1010.42 } },
+    'p8': { 'Jan 2026': { 'Mortgage': 2420.24, 'Repairs': 120, 'Electric': 127.44, 'Gas': 63.65, 'Internet': 80 }, 'Feb 2026': { 'Materials': 29.15 } }
   }
-  var sorted = Object.entries(totals).sort(function(a,b){return b[1]-a[1];});
-  var grand = sorted.reduce(function(s,x){return s+x[1];},0);
-  return {
-    labels: sorted.map(function(x){return x[0];}),
-    data: sorted.map(function(x){return Math.round(x[1]*100)/100;}),
-    total: grand,
-    colors: sorted.map(function(_,i){return catPalette[i % catPalette.length];})
-  };
+};
+
+
+// Rebuild stackedData from actual expenses
+function rebuildStackedDataFromExpenses() {
+  if (typeof expensesAutoLoaded === 'undefined' || !expensesAutoLoaded.length) return;
+  
+  var props = new Set(), propMap = {}, months = new Set(), byPropMonth = {};
+  var propOrder = ['5th Dr', '38th Dr', 'Janice Way', 'Grandview', '25th St', 'Mesa', '13th Ave'];
+  
+  expensesAutoLoaded.forEach(e => {
+    if (!e.prop || e.income) return; // Skip unassigned and income
+    months.add(e.date.substring(0, 7)); // YYYY-MM
+    if (!propMap[e.prop]) propMap[e.prop] = e.prop;
+    props.add(e.prop);
+    
+    var key = e.date.substring(0, 7);
+    if (!byPropMonth[e.prop]) byPropMonth[e.prop] = {};
+    if (!byPropMonth[e.prop][key]) byPropMonth[e.prop][key] = {};
+    byPropMonth[e.prop][key][e.cat] = (byPropMonth[e.prop][key][e.cat] || 0) + e.amount;
+  });
+  
+  var propArray = propOrder.filter(p => props.has(p));
+  var monthArray = Array.from(months).sort(); // Keep YYYY-MM for lookups
+  
+  stackedData.properties = propArray;
+  stackedData.propertyIds = propArray;
+  stackedData.months = monthArray; // YYYY-MM format e.g. "2026-02"
+  stackedData.byPropertyMonth = byPropMonth;
 }
 
-function initCatExpenseChart() {
-  var ctx = document.getElementById('catExpenseChart');
-  if (!ctx) return;
-  if (catExpenseChartInstance) { catExpenseChartInstance.destroy(); catExpenseChartInstance = null; }
-  var d = buildCatExpenseData(currentCatView);
-  catExpenseChartInstance = new Chart(ctx, {
-    type: 'bar',
-    data: {
-      labels: d.labels,
-      datasets: [{
-        data: d.data,
-        backgroundColor: d.colors,
-        borderRadius: 6,
-        borderSkipped: false,
-        barThickness: 28
-      }]
-    },
-    options: {
-      indexAxis: 'y',
-      responsive: true,
-      maintainAspectRatio: false,
-      plugins: {
-        legend: {display: false},
-        tooltip: {
-          callbacks: {
-            label: function(i) {
-              var pct = d.total > 0 ? (i.raw/d.total*100).toFixed(1) : '0.0';
-              return '  $' + i.raw.toLocaleString('en-US',{minimumFractionDigits:2,maximumFractionDigits:2}) + '  (' + pct + '%)';
-            }
-          },
-          backgroundColor:'rgba(15,20,33,0.92)',titleColor:'#f1f5f9',bodyColor:'#cbd5e1',
-          borderColor:'#3b82f6',borderWidth:1,padding:10,cornerRadius:8
-        },
-        datalabels: {
-          anchor: 'end',
-          align: 'end',
-          formatter: function(value, ctx2) {
-            var pct = d.total > 0 ? (value/d.total*100).toFixed(1) : '0.0';
-            return '$' + value.toLocaleString('en-US',{minimumFractionDigits:0,maximumFractionDigits:0}) + '  (' + pct + '%)';
-          },
-          color: '#1e293b',
-          font: {size: 11, weight: '600'},
-          clip: false
-        }
+var catColors = {
+  'Mortgage':'#ef4444','Electric':'#f97316','Gas':'#eab308','Internet':'#8b5cf6',
+  'Solar':'#22c55e','Water':'#06b6d4','Repairs':'#3b82f6','Materials':'#f59e0b',
+  'Landscaping':'#84cc16','Cleaning':'#ec4899','Furnishings':'#a78bfa',
+  'Marketing':'#fb7185','Software':'#94a3b8','Insurance':'#64748b',
+  'VA & Staff':'#c084fc','Legal':'#67e8f9','Travel':'#fde68a','Other':'#475569'
+};
+
+function buildStackedDatasets(view) {
+  var allCats = Object.keys(catColors);
+  var props = stackedData.properties;
+  var pIds = stackedData.propertyIds;
+  var months = stackedData.months;
+  var datasets = [];
+  if (view === 'monthly') {
+    var labels = [];
+    months.forEach(function(m){ 
+      var d = new Date(m + '-01');
+      var mLabel = d.toLocaleString('en-US', {month:'short', year:'numeric'}).split(' ')[0];
+      props.forEach(function(p){ labels.push(p + ' (' + mLabel + ')'); }); 
+    });
+    allCats.forEach(function(cat) {
+      var vals = [];
+      months.forEach(function(m){ pIds.forEach(function(pid){ var d=stackedData.byPropertyMonth[pid][m]||{}; vals.push(d[cat]||0); }); });
+      if (!vals.some(function(v){return v>0;})) return;
+      datasets.push({ label:cat, data:vals, backgroundColor:catColors[cat]||'#475569', borderColor:'rgba(0,0,0,0.15)', borderWidth:1, borderRadius:3 });
+    });
+    return { labels:labels, datasets:datasets };
+  } else {
+    var labels = props;
+    allCats.forEach(function(cat) {
+      var vals = pIds.map(function(pid){ return months.reduce(function(s,m){ var d=stackedData.byPropertyMonth[pid][m]||{}; return s+(d[cat]||0); },0); });
+      if (!vals.some(function(v){return v>0;})) return;
+      datasets.push({ label:cat, data:vals, backgroundColor:catColors[cat]||'#475569', borderColor:'rgba(0,0,0,0.15)', borderWidth:1, borderRadius:4 });
+    });
+    return { labels:labels, datasets:datasets };
+  }
+}
+
+function buildStackedLegend(datasets) {
+  var el = document.getElementById('stackedExpLegend');
+  if (!el) return;
+  el.innerHTML = datasets.map(function(ds){
+    return '<div style="display:flex;align-items:center;gap:6px;font-size:11px;color:#444;">' +
+      '<div style="width:12px;height:12px;background:'+ds.backgroundColor+';border-radius:2px;flex-shrink:0;"></div>'+
+      '<span>'+ds.label+'</span></div>';
+  }).join('');
+}
+
+var stackChartOptions = {
+  responsive:true, maintainAspectRatio:false,
+  plugins: {
+    legend:{display:true},
+    tooltip:{
+      callbacks:{
+        title:function(i){return i[0].label;},
+        label:function(i){ if(!i.raw||i.raw===0) return null; return ' '+i.dataset.label+': $'+i.raw.toLocaleString('en-US',{minimumFractionDigits:2,maximumFractionDigits:2}); },
+        footer:function(i){ var t=i.reduce(function(s,x){return s+(x.raw||0);},0); return 'Total: $'+t.toLocaleString('en-US',{minimumFractionDigits:2,maximumFractionDigits:2}); }
       },
-      layout: { padding: { right: 130 } },
-      scales: {
-        x: {
-          ticks: {
-            color:'#475569',
-            font:{size:11},
-            callback: function(v){ return '$'+(v/1000).toFixed(0)+'k'; }
-          },
-          grid: {color:'rgba(0,0,0,0.06)'},
-          border: {display:false}
-        },
-        y: {
-          ticks: {
-            color:'#1e293b',
-            font:{size:13, weight:'600'}
-          },
-          grid: {display:false},
-          border: {display:false}
-        }
-      }
-    },
-    plugins: [ChartDataLabels]
-  });
+      filter:function(i){return i.raw>0;},
+      backgroundColor:'rgba(15,20,33,0.95)',titleColor:'#f1f5f9',bodyColor:'#cbd5e1',
+      footerColor:'#3b82f6',borderColor:'#3b82f6',borderWidth:1,padding:12,cornerRadius:8
+    }
+  },
+  scales:{
+    x:{stacked:true, ticks:{color:'#000',font:{size:10},maxRotation:30}, grid:{color:'rgba(0,0,0,0.1)'}},
+    y:{stacked:true, ticks:{color:'#000',font: { size: 12, color: '#1f2937'},callback:function(v){return '$'+(v/1000).toFixed(0)+'k';}}, grid:{color:'rgba(0,0,0,0.1)'}}
+  }
+};
+
+function setStackView(view) {
+  document.getElementById('btnStackMonthly').style.background = view==='monthly'?'#3b82f6':'#2d3448';
+  document.getElementById('btnStackMonthly').style.color = view==='monthly'?'#fff':'#94a3b8';
+  document.getElementById('btnStackAnnual').style.background = view==='annual'?'#3b82f6':'#2d3448';
+  document.getElementById('btnStackAnnual').style.color = view==='annual'?'#fff':'#94a3b8';
+  var built = buildStackedDatasets(view);
+  buildStackedLegend(built.datasets);
+  if (stackedExpenseChartInstance) {
+    stackedExpenseChartInstance.data.labels = built.labels;
+    stackedExpenseChartInstance.data.datasets = built.datasets;
+    stackedExpenseChartInstance.update('active');
+  }
 }
 
-function setCatView(view) {
-  currentCatView = view;
-  ['2026-01','2026-02','ytd'].forEach(function(v) {
-    var btn = document.getElementById(v === '2026-01' ? 'btnCat01' : v === '2026-02' ? 'btnCat02' : 'btnCatYTD');
-    if (btn) {
-      btn.style.background = v === view ? '#3b82f6' : '#ffffff';
-      btn.style.color = v === view ? '#fff' : '#475569';
-      btn.style.borderColor = v === view ? '#3b82f6' : '#e2e8f0';
-    }
-  });
-  initCatExpenseChart();
+function initStackedExpenseChart() {
+  var ctx = document.getElementById('stackedExpenseChart');
+  if (!ctx) return;
+  var built = buildStackedDatasets('monthly');
+  buildStackedLegend(built.datasets);
+  stackedExpenseChartInstance = new Chart(ctx, { type:'bar', data:{ labels:built.labels, datasets:built.datasets }, options:stackChartOptions });
 }
 
 
