Add detailed file descriptions to Upload Data tab

--- a/index.html
+++ b/index.html
@@ -1196,10 +1196,17 @@ canvas{max-height:320px}
   <div class="how-to-card" style="border-left:4px solid #34d399;">
     <div class="how-to-title">✅ What to Upload</div>
     <ul class="step-list" style="margin:0;">
-      <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text"><strong>CSV files</strong> — Bank statements, transaction data, income reports</div></li>
-      <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text"><strong>PDF files</strong> — Documents, reports, statements</div></li>
+      <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text"><strong>Chase Checking</strong> — Main operating account (CSV)</div></li>
+      <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text"><strong>Chase Southwest Card (7623)</strong> — Business credit card (CSV)</div></li>
+      <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text"><strong>Chase Amazon Card (8986)</strong> — Business credit card (CSV)</div></li>
+      <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text"><strong>summary.csv</strong> — PadSplit summary by property (monthly updated)</div></li>
+      <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text"><strong>collected.csv</strong> — PadSplit collections detail for verification</div></li>
+      <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text"><strong>RentPerfect PaymentHistory</strong> — Direct deposit reconciliation (CSV)</div></li>
+      <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text"><strong>Airbnb Transaction History</strong> — Income tracking by property (CSV)</div></li>
+      <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text"><strong>Home Depot Purchase History</strong> — Materials & repairs (CSV)</div></li>
+      <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text"><strong>Chase Zelle Report</strong> — Contractor & other payments (CSV)</div></li>
     </ul>
-    <p style="margin:12px 0 0 0;color:#475569;font-size:14px;">Your dashboard will reflect changes within a few minutes of upload.</p>
+    <p style="margin:12px 0 0 0;color:#475569;font-size:14px;">Your dashboard will reflect changes within a few minutes of upload. Replace files with the same name monthly to keep data current.</p>
   </div>
   
   <div class="how-to-card" style="border-left:4px solid #fbbf24;">
