--- a/index.html
+++ b/index.html
@@ -1195,17 +1195,32 @@ canvas{max-height:320px}
   
   <div class="how-to-card" style="border-left:4px solid #34d399;">
     <div class="how-to-title">✅ What to Upload</div>
-    <ul class="step-list" style="margin:0;">
-      <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text"><strong>Chase Checking</strong> — Main operating account (CSV)</div></li>
-      <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text"><strong>Chase Southwest Card (7623)</strong> — Business credit card (CSV)</div></li>
-      <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text"><strong>Chase Amazon Card (8986)</strong> — Business credit card (CSV)</div></li>
-      <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text"><strong>summary.csv</strong> — PadSplit summary by property (monthly updated)</div></li>
-      <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text"><strong>collected.csv</strong> — PadSplit collections detail for verification</div></li>
-      <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text"><strong>RentPerfect PaymentHistory</strong> — Direct deposit reconciliation (CSV)</div></li>
-      <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text"><strong>Airbnb Transaction History</strong> — Income tracking by property (CSV)</div></li>
-      <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text"><strong>Home Depot Purchase History</strong> — Materials & repairs (CSV)</div></li>
-      <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text"><strong>Chase Zelle Report</strong> — Contractor & other payments (CSV)</div></li>
-    </ul>
+    <div style="margin:0;color:#475569;">
+      <div style="margin-bottom:16px;">
+        <strong style="color:#1a1a1a;font-size:15px;">🏦 Chase Bank</strong>
+        <ul class="step-list" style="margin:8px 0 0 0;">
+          <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text">Chase Checking — Main operating account</div></li>
+          <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text">Chase Southwest Card (7623) — Business credit card</div></li>
+          <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text">Chase Amazon Card (8986) — Business credit card</div></li>
+          <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text">Chase Zelle Report — Contractor & other payments</div></li>
+        </ul>
+      </div>
+      <div style="margin-bottom:16px;">
+        <strong style="color:#1a1a1a;font-size:15px;">🏠 PadSplit</strong>
+        <ul class="step-list" style="margin:8px 0 0 0;">
+          <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text">summary.csv — Monthly summary by property</div></li>
+          <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text">collected.csv — Collections detail for verification</div></li>
+        </ul>
+      </div>
+      <div>
+        <strong style="color:#1a1a1a;font-size:15px;">📊 Other Sources</strong>
+        <ul class="step-list" style="margin:8px 0 0 0;">
+          <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text">RentPerfect PaymentHistory — Direct deposit reconciliation</div></li>
+          <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text">Airbnb Transaction History — Income by property</div></li>
+          <li><span class="step-num" style="background:#34d399">✓</span><div class="step-text">Home Depot Purchase History — Materials & repairs</div></li>
+        </ul>
+      </div>
+    </div>
     <p style="margin:12px 0 0 0;color:#475569;font-size:14px;">Your dashboard will reflect changes within a few minutes of upload. Replace files with the same name monthly to keep data current.</p>
   </div>
   
