--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ body{font-family:'Segoe UI',system-ui,sans-serif;background:#ffffff;color:#1f293
 .how-to-title{font-size:18px;font-weight:700;color:#1e3a5f;margin-bottom:6px}
 .how-to-sub{font-size:13px;color:#64748b;margin-bottom:20px}
 .step-list{list-style:none}
-.step-list li{display:flex;gap:14px;margin-bottom:14px;padding:12px 16px;background:#f8fafc;border-radius:8px;align-items:flex-start;border:1px solid #e2e8f0}
+.step-list li{display:flex;gap:14px;margin-bottom:14px;padding:12px 16px;background:#f0f4f8;border-radius:8px;align-items:flex-start;border:1px solid #d1d5db}
 .step-num{background:#c9a84c;color:#0d1b2e;border-radius:50%;width:26px;height:26px;display:flex;align-items:center;justify-content:center;font-size:13px;font-weight:700;flex-shrink:0}
 .step-text{font-size:16px;color:#475569;line-height:1.6}
 .step-text strong{color:#1e3a5f}
@@ -1188,7 +1188,7 @@ canvas{max-height:320px}
     <div class="how-to-title">🚀 How to Upload in 3 Steps</div>
     <ul class="step-list">
       <li><span class="step-num">1</span><div class="step-text">Go to your GitHub repository: <a href="https://github.com/thrivewellCL/dashboard" target="_blank" style="color:#c9a84c;text-decoration:underline;">github.com/thrivewellCL/dashboard</a></div></li>
-      <li><span class="step-num">2</span><div class="step-text">Navigate to the <strong><code style="background:#0d1b2e;padding:2px 6px;border-radius:4px;color:#c9a84c">data</code></strong> folder</div></li>
+      <li><span class="step-num">2</span><div class="step-text">Navigate to the <strong><code style="background:#e8eef5;padding:2px 6px;border-radius:4px;color:#1a1a1a;font-weight:600">data</code></strong> folder</div></li>
       <li><span class="step-num">3</span><div class="step-text">Click <strong>"Add file"</strong> → <strong>"Upload files"</strong>, select your CSV or PDF, then commit</div></li>
     </ul>
   </div>
@@ -1425,7 +1425,7 @@ canvas{max-height:320px}
             <div class="how-to-title">🚀 How to Upload in 3 Steps</div>
             <ul class="step-list">
                 <li><span class="step-num">1</span><div class="step-text">Go to your GitHub repository: <a href="https://github.com/thrivewellCL/dashboard" target="_blank" style="color:#c9a84c;text-decoration:underline;">github.com/thrivewellCL/dashboard</a></div></li>
-                <li><span class="step-num">2</span><div class="step-text">Navigate to the <strong><code style="background:#0d1b2e;padding:2px 6px;border-radius:4px;color:#c9a84c">data</code></strong> folder</div></li>
+                <li><span class="step-num">2</span><div class="step-text">Navigate to the <strong><code style="background:#e8eef5;padding:2px 6px;border-radius:4px;color:#1a1a1a;font-weight:600">data</code></strong> folder</div></li>
                 <li><span class="step-num">3</span><div class="step-text">Click <strong>"Add file"</strong> → <strong>"Upload files"</strong>, select your CSV or PDF, then commit</div></li>
             </ul>
         </div>
