--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ body{font-family:'Segoe UI',system-ui,sans-serif;background:#ffffff;color:#1f293
 .card{background:#fff;border-radius:12px;padding:24px;border:1px solid #e2e8f0;margin-bottom:20px;box-shadow:0 2px 8px rgba(0,0,0,0.06)}
 .card-title{font-size:16px;font-weight:600;color:#1e3a5f;margin-bottom:16px;display:flex;align-items:center;gap:8px}
 .chart-row{display:grid;grid-template-columns:1fr 1fr;gap:20px;margin-bottom:20px}
-.chart-card{background:#fff;border-radius:12px;padding:20px;border:1px solid #e2e8f0;position:relative;min-height:440px;box-shadow:0 2px 8px rgba(0,0,0,0.06);width:100%}
+.chart-card{background:#fff;border-radius:12px;padding:20px;border:1px solid #e2e8f0;position:relative;min-height:200px;box-shadow:0 2px 8px rgba(0,0,0,0.06);width:100%}
 .chart-title{font-size:14px;font-weight:600;color:#1e3a5f;margin-bottom:16px}
 .warning-banner{background:linear-gradient(135deg,#fef3c7,#fde68a);border:1px solid #f59e0b;border-radius:10px;padding:16px 20px;margin-bottom:24px;display:flex;align-items:center;gap:12px;cursor:pointer}
 .warning-banner:hover{background:linear-gradient(135deg,#fde68a,#fcd34d)}
@@ -395,8 +395,8 @@ canvas{max-height:320px}
           style="padding:7px 16px;border-radius:20px;border:none;cursor:pointer;font-size:12px;font-weight:600;background:#3b82f6;color:#fff;">YTD 2026</button>
       </div>
     </div>
-    <div style="position:relative;height:480px;">
-      <canvas id="catExpenseChart" style="width:100%;height:100%;"></canvas>
+    <div id="catExpChartWrap" style="position:relative;">
+      <canvas id="catExpenseChart" style="width:100%;"></canvas>
     </div>
   </div>
 
@@ -2515,6 +2515,14 @@ function initCatExpenseChart(period) {
     return CAT_COLORS[c] || '#94a3b8';
   });
 
+  // Set container height dynamically based on number of categories
+  var wrap = document.getElementById('catExpChartWrap');
+  if (wrap) {
+    var dynHeight = Math.max(300, cats.length * 58 + 80);
+    wrap.style.height = dynHeight + 'px';
+    ctx.style.height = dynHeight + 'px';
+  }
+
   catExpenseChartInstance = new Chart(ctx, {
     type: 'bar',
     data: {
@@ -2523,7 +2531,8 @@ function initCatExpenseChart(period) {
         data: amounts,
         backgroundColor: bgColors,
         borderRadius: 6,
-        borderSkipped: false
+        borderSkipped: false,
+        barThickness: 36
       }]
     },
     options: {
